[tool.poetry]
name = "szurubooru"
version = "2.4.1"
description = "Image board engine, Danbooru-style."
authors = ["rr- (https://github.com/rr-)"]

[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
